added tech stack

--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
 <style>
 h1 {text-align: center;}
+h2 {text-align: center;}
 p {text-align: center;}
 div {text-align: center;}
+ul {text-align: center;}
+li {text-align: center;}
 </style>
 </head>
 <body>
@@ -12,6 +15,31 @@ div {text-align: center;}
 <h1>Kirti Upacharya</h1>
 <p>Product Engineer</p>
 <div>Mercedez Benz</div>
+<hr>
+<h2>Tech Stack</h2>
+<div>
+    <ul>
+        <li>
+            Javascript
+        </li>
+        <li>
+            HTML
+        </li>
+        <li>
+            CSS
+        </li>
+        <li>
+            Node.js
+        </li>
+        <li>
+            Express
+        </li>
+        <li>
+            MongoDB
+        </li>
+    </ul>
+</div>
+
 
 </body>
 </html>
